# shared_lists

./: .gitignore  AGENTS.md  DESIGN.md
.githooks/: pre-commit
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/.github/workflows/: rust.yml
backend/.sqlx/: query-3a025905190fa54478419db03d49d4b1deac8768b5ad357fedf29eb0b65817cd.json  query-688b627f9f9c0d489aa1ca05c85926dbf70a85653e0b436ed56f7dca8b5def0b.json  query-6debef46485d66ffe7f9503bb14de8e2fc18758553d3e712a23065ef21fc714d.json  query-d2d4de405f89f2c1ca5587e976cd5985b462b00557fd8dc875e2cb2eb96b924e.json
backend/migrations/: 001_initial_schema.sql  002_public_slug.sql  003_api_keys.sql  004_list_settings.sql
backend/src/: config.rs  error.rs  main.rs  tests_utils.rs  validators.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: api_key.rs  auth.rs  list.rs  list_item.rs  mod.rs  page.rs  permission.rs  user.rs
backend/src/repositories/: api_key.rs  list.rs  mod.rs  page.rs  user.rs
backend/src/routes/: api_keys.rs  auth.rs  lists.rs  mod.rs  pages.rs  public.rs  users.rs
backend/src/services/: api_key.rs  auth.rs  mod.rs
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CreatePageDialog.tsx  DeleteConfirmDialog.tsx  ListCard.tsx  ListComponent.tsx  ListItem.tsx  ListItemComponent.tsx  ShareDialog.tsx  (+1 more)
scripts/: install-hooks.sh
(+38 files in other folders)
