[package]
name = "shared_lists_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Required for tests that call router oneshot
hyper = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth & Security
jsonwebtoken = "9"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Environment
config = "0.14"
urlencoding = "2.1"

[dev-dependencies]
